--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pyrofork==2.3.45
+pyrogram==2.0.106
 tgcrypto 
 pymongo[srv]==4.5.0 
 motor==3.3.2
@@ -48,3 +48,4 @@ pyromod
 colorama
 
 telegraph 
+
