--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 pyrogram==2.0.106
+pyrofork==2.3.69
 tgcrypto 
 pymongo[srv]==4.5.0 
 motor==3.3.2
@@ -48,4 +49,5 @@ pyromod
 colorama
 
 telegraph 
+
 
